Upload Mainsail File changes for v1.2.8
Fix some indentation issues (tabs vs spaces?) which only seem to show in GitHub...
Add macro to clear message from display.  Useful to boot routine. May have future uses. Avoids using delayed gcode.  Allows system to briefly (2.5 secs) confirm state of runout sensor at boot, before displaying "Printer Ready."
Added caution that some macros in CR6.cfg are not used/tested & may not work with DGUS-Reloaded.

--- a/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/CR6.cfg
+++ b/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/CR6.cfg
@@ -1,4 +1,4 @@
-# Last modified: 19 Aug 2023
+# Last modified: 22 Aug 2023
 # 
 # NOTES:
 # 1. This file contains configs and macros specifically tuned for my CR6-SE
@@ -66,16 +66,6 @@ enable_force_move: True
 #####################################################
 #####################   MACROS   ####################
 #####################################################
-
-[gcode_macro RUNOUT_ON]
-gcode:
-    SET_FILAMENT_SENSOR SENSOR=RunoutSensor ENABLE=1
-    REPORT_FILAMENT_SENSOR_ENABLE_STATUS
-
-[gcode_macro RUNOUT_OFF]
-gcode:
-    SET_FILAMENT_SENSOR SENSOR=RunoutSensor ENABLE=0
-    REPORT_FILAMENT_SENSOR_ENABLE_STATUS
 
 [gcode_macro TEST_RUNOUT_STATE]
 gcode:
@@ -231,57 +221,62 @@ gcode:
 # start_print HOTEND_TEMP={material_print_temperature_layer_0} BED_TEMP={material_bed_temperature_layer_0}
 description: Set printer config parameters. Load BED_MESH profile and Z Offset based on nozzle target temperature.
 gcode:
-    # Use SETUP menu to Disable|Enable Runout Sensor before starting print.
+  # Use SETUP menu to Disable|Enable Runout Sensor before starting print.
 
-    DGUS_PRINT_START  # Causes DGUS-Reloaded to switch to the Print Status screen
-    SET_DISABLE_PAUSE_STOP # Causes DGUS-Feloaded to disable the PAUSE and STOP buttons until the purge line is being drawn. (Solves Issue#31)
-    STORE_REPRINT_PARAMETERS  # Saves the current print job name and path, to enable reprinting this job by running the macro REPEAT_LAST_PRINT
-    {% if printer.homed_axes != 'XYZ' %} # If axes are already homed, skip the G28
-        G28  ; Must start by homing all axes, or PAUSE or STOP commands issued prior to the printer heating up will fail with "Printer Must be Homed"
-    {% endif %}
-    {% set toolTemp = params.HOTEND_TEMP|int %}
+  DGUS_PRINT_START  # Causes DGUS-Reloaded to switch to the Print Status screen
+
+  SET_DISABLE_PAUSE_STOP # Tell DGUS-Feloaded to disable the PAUSE and STOP buttons until the purge line is being drawn. (Solves Issue#31)
+  STORE_REPRINT_PARAMETERS  # Saves the current print job name and path, to enable reprinting this job by running the macro REPEAT_LAST_PRINT
+
+  {% if printer.homed_axes != 'XYZ' %} # If axes are already homed, skip the G28
+    G28  ; Must start by homing all axes, or PAUSE or STOP commands issued prior to the printer heating up will fail with "Printer Must be Homed"
+  {% endif %}
+  {% set toolTemp = params.HOTEND_TEMP|int %}
 	{% set bedTemp = params.BED_TEMP|int %}
 	M82 								# absolute extrusion mode
 	M220 S100 							# Reset Feedrate
 	M221 S100 							# Reset Flowrate
 
-    # Clear the bed mesh and then load the best bed mesh profile for the current print job
-    # NOTE: If you print at even higher bed temps, use the following code as a model & insert the if/elif options you need. (Will also require adding a corresponding RUN_ABL_BED_xx macro)
-    BED_MESH_CLEAR
-    {% if bedTemp >= 70 %}              # If printing PETG... 
-        BED_MESH_PROFILE LOAD=BED_MESH_PETG  # ...load the bed mesh profile saved after using RUN_ABL_BED_80
-    {% elif bedTemp >= 50 %}            # If printing PLA... 
-        BED_MESH_PROFILE LOAD=BED_MESH_PLA   # ... load the bed mesh profile saved after using RUN_ABL_BED_60
-	{% else %}                          # If printing at less than 50C bed temp (e.g. TPU at 30C) ...
-        BED_MESH_PROFILE LOAD=default        # ...load the mesh profile saved after using RUN_ABL_COLD or after using the DGUS_Reloaded "Run ABL" function
-	{% endif %}
-	G0 X0 Y0 F5000                           # Home X&Y axes. 
+  # Clear the bed mesh and then load the best bed mesh profile for the current print job
+  # NOTE: If you print at even higher bed temps, use the following code as a model & insert the if/elif options you need. (Will also require adding a corresponding RUN_ABL_BED_xx macro)
+  BED_MESH_CLEAR
+  {% if bedTemp >= 70 %}              # If printing PETG... 
+    BED_MESH_PROFILE LOAD=BED_MESH_PETG  # ...load the bed mesh profile saved after using RUN_ABL_BED_80
+  {% elif bedTemp >= 50 %}            # If printing PLA... 
+    BED_MESH_PROFILE LOAD=BED_MESH_PLA   # ... load the bed mesh profile saved after using RUN_ABL_BED_60
+  {% else %}                          # If printing at less than 50C bed temp (e.g. TPU at 30C) ...
+    BED_MESH_PROFILE LOAD=default        # ...load the mesh profile saved after using RUN_ABL_COLD or after using the DGUS_Reloaded "Run ABL" function
+  {% endif %}
+
+    # Set movement to Absolute Positioning mode
+	G90
+    # move to the left front corner and wait until the bed is within 10 deg of target then heat the hotend
+  G0 X0 Y0 F5000                           # Home X&Y axes. 
     # Ignore Z height until PrintBed is at Target Temp. 
     # Saves time by eliminating a redundant homing & reduces the risk of forgetting to clear any residue off the cold nozzle before STABLE_Z_HOME starts.
-
-# move to the left front corner and wait until the bed is within 10 deg of target then heat the hotend
-	G90
     # If mean to print without heating bed, need to prevent software waiting for bed to cool to zero!
-    {% if bedTemp >0 %}
-       SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
-       TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp-2} MAXIMUM={bedTemp+2}
-    {% endif %}
+  {% if bedTemp >0 %}
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={bedTemp}
+    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={bedTemp-2} MAXIMUM={bedTemp+2}
+  {% endif %}
     # Specifying both min and max also covers those cases where a print is started while the bed is already above the target temperature
 
     #  Home with a cold nozzle (avoids any drool getting trapped between nozzle and bed while probing, 
-    # as long as nozzle has been cleaned while waiting for bed to heat up...)
-    STABLE_Z_HOME
+    # as long as nozzle has been cleaned while waiting for bed to heat up...
+  STABLE_Z_HOME
 
-    # Return to left front corner after homing Z 
-    G0 Z20
+    # Return to left front corner after homing Z, with Z height at 20mm 
+  G0 Z20
 	G0 X0 Y0 F5000
-    SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
-    TEMPERATURE_WAIT SENSOR=extruder MINIMUM={toolTemp-2} MAXIMUM={toolTemp+2} # Wait for extruder to achieve between target print temperature and target-2 degC. 
-    # M109 S{toolTemp}  # Waited forever for extruder to achieve target print temperature !?
-    # Specifying both min and max also covers those cases where a print is started while the nozzle is above the target temperature
+  SET_HEATER_TEMPERATURE HEATER=extruder TARGET={toolTemp}
+  TEMPERATURE_WAIT SENSOR=extruder MINIMUM={toolTemp-2} MAXIMUM={toolTemp+2} # Wait for extruder to achieve between target print temperature and target-2 degC. 
+  # M109 S{toolTemp}  # Waited forever for extruder to achieve target print temperature !?
+  # Specifying both min and max also covers those cases where a print is started while the nozzle is above the target temperature
     
+	# Re-enable the Print Pause and Stop buttons on the Printing screen
+  CLEAR_DISABLE_PAUSE_STOP
+
 	# And we can now draw our purge line
-    CLEAR_DISABLE_PAUSE_STOP
 	G92 E0 								#Reset Extruder
 	G1 Z2.0 F3000 						#Move Z Axis up
 	G1 X0 Y20 Z0.28						#Move to start position
@@ -292,7 +287,7 @@ gcode:
 	G1 Z2.0 F3000 						#Move Z Axis up
 
     # IF the RunoutSensor is Enabled, and it is reporting No Filament Detected, then Pause and prompt for filament, ELSE start printing
-    TEST_RUNOUT_STATE
+  TEST_RUNOUT_STATE
 
 [gcode_macro END_PRINT]
 # Put the following in the Cura end code and remove everything else:
@@ -325,6 +320,13 @@ gcode:
 gcode:
   SET_PIN PIN=hotend_LED value=0
 
+[gcode_macro clear_message]
+gcode:
+  M117
+
+##################### The following macros were already in CR6.cfg when it was forked. ##############
+############### They are not used by Tninkersbluff and may or may not work as-is ####################
+
 [gcode_macro LOAD_FILAMENT]
 description:  MUST HEAT NOZZLE BEFORE RUNNING THIS. Ensures Z>=30mm. Loads filament, then retracts 0.5mm.
 gcode:
@@ -348,7 +350,7 @@ description: MUST HEAT NOZZLE BEFORE RUNNING THIS. Ensures Z>=30mm. Pushes a lit
 gcode:
   {% set act_z = printer.toolhead.position.z|float %}
   {% if act_z < 30.0 %}
-	G0 Z30
+	  G0 Z30
   {% endif %}
   SAVE_GCODE_STATE NAME=before_unload_filament_state
   M83                            ; set extruder to relative
@@ -360,14 +362,14 @@ gcode:
 [gcode_macro Hotend_Cleaning]
 description: MUST HEAT NOZZLE BEFORE RUNNING THIS. Just pushes filament in, extrudes some, then retracts all
 gcode:
-    SAVE_GCODE_STATE NAME=before_hot_end_cleaning_state
-    M83                            ; set extruder to relative
-    G1 E45 F1000                  ; quickly load filament set for direct drive, for bowden set to E280
-    G1 E30 F300                    ; slower extrusion for hotend path
-    G1 E50 F150                    ; prime nozzle with filament
-    G1 E-100 F1000                 ; retract filament completely, set to E380 for Bowden
-    #M82                            ; set extruder to absolute
-    RESTORE_GCODE_STATE NAME=before_hot_end_cleaning_state
+  SAVE_GCODE_STATE NAME=before_hot_end_cleaning_state
+  M83                            ; set extruder to relative
+  G1 E45 F1000                  ; quickly load filament set for direct drive, for bowden set to E280
+  G1 E30 F300                    ; slower extrusion for hotend path
+  G1 E50 F150                    ; prime nozzle with filament
+  G1 E-100 F1000                 ; retract filament completely, set to E380 for Bowden
+  #M82                            ; set extruder to absolute
+  RESTORE_GCODE_STATE NAME=before_hot_end_cleaning_state
 
 [gcode_macro M204]
 rename_existing: M204.1
