--- a/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/DGUS-Reloaded.cfg
+++ b/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/DGUS-Reloaded.cfg
@@ -70,6 +70,37 @@ gcode:
     SAVE_VARIABLE VARIABLE=disable_pause_stop VALUE=False
     M117 PAUSE and STOP restored
 
+[gcode_macro RUNOUT_ON]
+gcode:
+    SET_FILAMENT_SENSOR_BASE SENSOR=RunoutSensor ENABLE=1
+    {% set svv = printer.save_variables.variables %}
+    SAVE_VARIABLE VARIABLE=enable_runout_sensor VALUE=1
+    REPORT_FILAMENT_SENSOR_ENABLE_STATUS
+
+[gcode_macro RUNOUT_OFF]
+gcode:
+    SET_FILAMENT_SENSOR_BASE SENSOR=RunoutSensor ENABLE=0
+    {% set svv = printer.save_variables.variables %}
+    SAVE_VARIABLE VARIABLE=enable_runout_sensor VALUE=0
+    REPORT_FILAMENT_SENSOR_ENABLE_STATUS
+
+[gcode_macro SET_FILAMENT_SENSOR]
+description: Sets the filament sensor on/off, based on Saved variable enable_runout_sensor in variables.cfg
+rename_existing: SET_FILAMENT_SENSOR_BASE
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% if svv.enable_runout_sensor==0 %}
+      M117 was 0
+      RUNOUT_OFF
+    {% elif svv.enable_runout_sensor==1 %}
+      M117 was 1
+      RUNOUT_ON
+    {% endif %}
+
+[delayed_gcode SAY_READY]
+gcode:
+    M117 Printer Ready
+
 # Now define a new macro that kicks off the last print and assign this macro to the DWIN_SET PRINT button:
 [gcode_macro REPEAT_LAST_PRINT]
 description: Repeat the last print
