--- a/Related Changes/If you have a BTT SKR CR6 motherboard/Overwrite these Klipper host files/Use these configuration files to  tailor your Klipper config/DGUS-Reloaded.cfg
+++ b/Related Changes/If you have a BTT SKR CR6 motherboard/Overwrite these Klipper host files/Use these configuration files to  tailor your Klipper config/DGUS-Reloaded.cfg
@@ -70,26 +70,50 @@ gcode:
     SAVE_VARIABLE VARIABLE=disable_pause_stop VALUE=False
     M117 PAUSE and STOP restored
 
-# Now define a new macro that kicks off the last print and assign this macro to the DWIN_SET PRINT button:
+[gcode_macro RUNOUT_ON]
+gcode:
+  SET_FILAMENT_SENSOR_BASE SENSOR=RunoutSensor ENABLE=1
+  {% set svv = printer.save_variables.variables %}
+  SAVE_VARIABLE VARIABLE=enable_runout_sensor VALUE=1
+  REPORT_FILAMENT_SENSOR_ENABLE_STATUS
+
+[gcode_macro RUNOUT_OFF]
+gcode:
+  SET_FILAMENT_SENSOR_BASE SENSOR=RunoutSensor ENABLE=0
+  {% set svv = printer.save_variables.variables %}
+  SAVE_VARIABLE VARIABLE=enable_runout_sensor VALUE=0
+  REPORT_FILAMENT_SENSOR_ENABLE_STATUS
+
+[gcode_macro SET_FILAMENT_SENSOR]
+description: Sets the filament sensor on/off, based on Saved variable enable_runout_sensor in variables.cfg
+rename_existing: SET_FILAMENT_SENSOR_BASE
+gcode:
+  {% set svv = printer.save_variables.variables %}
+  {% if svv.enable_runout_sensor==0 %}
+    RUNOUT_OFF
+  {% elif svv.enable_runout_sensor==1 %}
+    RUNOUT_ON
+  {% endif %}
+
 [gcode_macro REPEAT_LAST_PRINT]
-description: Repeat the last print
+description: Repeat the last print. Assigned to the DWIN_SET PRINT button
 # From: https://www.reddit.com/r/klippers/comments/v63nxr/rerun_last_print_macro/?utm_source=share&utm_medium=ios_app&utm_name=ioscss&utm_content=2&utm_term=1
 gcode:
-    {% if 'save_variables' in printer %}
-        {% set svv = printer.save_variables.variables %}
-        {% if 'last_file' in svv %}
-            {% set last_file=svv.last_file %}
-            {% if last_file != "None" %}
-                SDCARD_PRINT_FILE FILENAME="{last_file}"
-            {% else %}
-                RESPOND TYPE=error MSG="last_file filename in variables.cfg is 'None'"
-                M117 Nothing to print
-            {% endif %}
-        {% else %}
-            RESPOND TYPE=error MSG="last_print not found in printer.save_variables"
-            M117 Nothing to print
-        {% endif %}
+  {% if 'save_variables' in printer %}
+    {% set svv = printer.save_variables.variables %}
+    {% if 'last_file' in svv %}
+      {% set last_file=svv.last_file %}
+      {% if last_file != "None" %}
+        SDCARD_PRINT_FILE FILENAME="{last_file}"
+      {% else %}
+        RESPOND TYPE=error MSG="last_file filename in variables.cfg is 'None'"
+        M117 Nothing to print
+      {% endif %}
     {% else %}
-        RESPOND TYPE=error MSG="save_variables config section not defined"
-        M117 Not configured correctly
+      RESPOND TYPE=error MSG="variable 'last_file' not found in variables.cfg"
+      M117 Nothing to print
     {% endif %}
+  {% else %}
+    RESPOND TYPE=error MSG="save_variables config section not defined"
+    M117 Not configured correctly
+  {% endif %}
