--- a/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/DGUS-Reloaded.cfg
+++ b/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/DGUS-Reloaded.cfg
@@ -4,8 +4,9 @@ firmware: dgus_reloaded
 # software_version: D-R_CR6_v1.2.9
 machine_name: CR6-SE_Klipper
 #   The machine name shown on the information page.
-brightness: 100
+# brightness: 100  
 #   The default brightness for the touchscreen (as a value from 0 to 100).
+#   NOTE: DISABLED brightness entry at v1.2.9, to fix issue#37. 
 x_min: -2  # My printer's nozzle happens to be ~2mm to the left of the bed, when homed.
 #   This can be used to provide a lower limit (in mm) to X moves done using the
 #   touschreen. Movements will still be limited by your [stepper_x]
