Revise Klipper .cfg files for Creality ERA and 4.5.3 boards
Move all settings out of CR6.cfg and into printer.cfg
Move all settings out of DGUS-Reloaded.cfg and into printer.cfg
Rename CR6.cfg to MACROS.cfg
Consolidates all settings into printer.cfg,
Leaves some macros in DGUS-Reloaded until able to resolve whether (architecturally) those scripts should instead be moved to t5uid1.py or routines.cfg.

--- a/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/DGUS-Reloaded.cfg
+++ b/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/DGUS-Reloaded.cfg
@@ -1,28 +1,13 @@
-[t5uid1]
-# Configured to describe the CR6-SE test printer
-firmware: dgus_reloaded
-# software_version: D-R_CR6_v1.2.9
-machine_name: CR6-SE_Klipper
-#   The machine name shown on the information page.
-# brightness: 100  
-#   The default brightness for the touchscreen (as a value from 0 to 100).
-#   NOTE: DISABLED brightness entry at v1.2.9, to fix issue#37. 
-x_min: -2  # My printer's nozzle happens to be ~2mm to the left of the bed, when homed.
-#   This can be used to provide a lower limit (in mm) to X moves done using the
-#   touschreen. Movements will still be limited by your [stepper_x]
-#   configuration values.
-x_max: 235
-#   This can be used to provide an upper limit (in mm) to X moves done using the
-#   touschreen. Movements will still be limited by your [stepper_x]
-#   configuration values.
-y_min: -2.1  # I happen to be chasing a bug in which the printer sometimes throws a "movemement out of range" error with the Y location = -2.006mm...
-#   Same as x_min for the Y axis.
-y_max: 235
-#   Same as x_max for the Y axis.
-z_min: 0
-#   Same as x_min for the Z axis.
-z_max: 250
-#   Same as x_max for the Z axis.
+# Last Updated: 29 August 2023
+
+# NOTE: This cfg file contains some (but not all) of the Klipper macros which are invoked by DGUS-Reloaded cfg files
+#       Architecturally, some or all of the scripts in this file may more properly belong in routines.cfg or in t5uid1.py.
+#       For the moment, they are collected here, while alternative architectures/approaches are considered
+
+# NOTE: At v1.4.1 of the DGUS-Reloaded Klipper component, the [t5uid1] section of this cfg file was moved back into the printer.cfg file
+# - It solved issue #37, in which SAVE_CONFIG failed when it tried to save changes to the display brightness variable. (Not an expected behaviour)
+# - It simultaneously enabled SAVE_CONFIG to make display brightness setting changes persist after RESTART and FIRMWARE RESTART events. 
+
 # NOTE: The Material temperature preset values are presently defined in dgus_reloaded/__init__.py, as follows:
 #    'temp_pla': {
 #        'hotend': 210,
@@ -37,18 +22,22 @@ z_max: 250
 #        'bed': 80
 #    },
 # You can edit that file, to change these values.  I am presently researching how to move those definitions 
-# to this file and eventually to add a SetUp menu that will enable uses to change these values from the menu.
-# If ChatGPT is correct, then you should be able to define your own preferred material presets by modifying these values (within the programmed range of min and max temps)
+# to the [t5uid1] section of printer.cfg and eventually to add a SetUp menu that will enable uses to change these values from the menu.
+
 
 #================
-# How to implement Reprint Last Job, using SAVE_VARIABLES
-# From: https://www.reddit.com/r/klippers/comments/v63nxr/rerun_last_print_macro/?utm_source=share&utm_medium=ios_app&utm_name=ioscss&utm_content=2&utm_term=1
+# The following macros enable DGUS-Reloaded to make certain parameters persist after RESTART or FIRMWARE RESTART events.
+# The idea and these scripts were inspired and informed by:
+#    https://www.reddit.com/r/klippers/comments/v63nxr/rerun_last_print_macro/?utm_source=share&utm_medium=ios_app&utm_name=ioscss&utm_content=2&utm_term=1
 
-# Add or include this SAVE_VARIABLES section to printer.cfg:
 [save_variables]
 filename: ~/klipper/klippy/extras/t5uid1/dgus_reloaded/variables.cfg
+# The variables presently supported this way are:
+#   'filename' - holds the name of the last file printed
+#   'disable_pause_stop' - used to govern whether PAUSE print and STOP print are available, while printing
+#   'enable_runout_sensor' - used to govern whether the filament sensor is enabled or disabled at boot, independently of the printer.cfg pause_on_runout: setting.
 
-# Add the following to your START_PRINT macro:
+# PRINTING MACROS #########################################
 [gcode_macro STORE_REPRINT_PARAMETERS]
 description: Saves parameters required to reprint same job.
 gcode:
@@ -56,45 +45,6 @@ gcode:
     {% set filepath=printer.virtual_sdcard.file_path %}
     {% set filename=filepath.split('/')%}
     SAVE_VARIABLE VARIABLE=last_file VALUE='"{ filename[-1] }"'
-
-[gcode_macro SET_DISABLE_PAUSE_STOP]
-description: Saves a control variable tested by dgus_reloaded vars_in.cfg before processing PAUSE and STOP commands
-gcode: 
-    {% set svv = printer.save_variables.variables %}
-    SAVE_VARIABLE VARIABLE=disable_pause_stop VALUE=True
-    M117 PAUSE and STOP suspended
-
-[gcode_macro CLEAR_DISABLE_PAUSE_STOP]
-description: Saves a control variable tested by dgus_reloaded vars_in.cfg before processing PAUSE and STOP commands
-gcode: 
-    {% set svv = printer.save_variables.variables %}
-    SAVE_VARIABLE VARIABLE=disable_pause_stop VALUE=False
-    M117 PAUSE and STOP restored
-
-[gcode_macro RUNOUT_ON]
-gcode:
-  SET_FILAMENT_SENSOR_BASE SENSOR=RunoutSensor ENABLE=1
-  {% set svv = printer.save_variables.variables %}
-  SAVE_VARIABLE VARIABLE=enable_runout_sensor VALUE=1
-  REPORT_FILAMENT_SENSOR_ENABLE_STATUS
-
-[gcode_macro RUNOUT_OFF]
-gcode:
-  SET_FILAMENT_SENSOR_BASE SENSOR=RunoutSensor ENABLE=0
-  {% set svv = printer.save_variables.variables %}
-  SAVE_VARIABLE VARIABLE=enable_runout_sensor VALUE=0
-  REPORT_FILAMENT_SENSOR_ENABLE_STATUS
-
-[gcode_macro SET_FILAMENT_SENSOR]
-description: Sets the filament sensor on/off, based on Saved variable enable_runout_sensor in variables.cfg
-rename_existing: SET_FILAMENT_SENSOR_BASE
-gcode:
-  {% set svv = printer.save_variables.variables %}
-  {% if svv.enable_runout_sensor==0 %}
-    RUNOUT_OFF
-  {% elif svv.enable_runout_sensor==1 %}
-    RUNOUT_ON
-  {% endif %}
 
 [gcode_macro REPEAT_LAST_PRINT]
 description: Repeat the last print. Assigned to the DWIN_SET PRINT button
@@ -118,3 +68,46 @@ gcode:
     RESPOND TYPE=error MSG="save_variables config section not defined"
     M117 Not configured correctly
   {% endif %}
+
+[gcode_macro SET_DISABLE_PAUSE_STOP]
+description: Saves a control variable tested by dgus_reloaded vars_in.cfg before processing PAUSE and STOP commands
+gcode: 
+    {% set svv = printer.save_variables.variables %}
+    SAVE_VARIABLE VARIABLE=disable_pause_stop VALUE=True
+    M117 PAUSE and STOP suspended
+
+[gcode_macro CLEAR_DISABLE_PAUSE_STOP]
+description: Saves a control variable tested by dgus_reloaded vars_in.cfg before processing PAUSE and STOP commands
+gcode: 
+    {% set svv = printer.save_variables.variables %}
+    SAVE_VARIABLE VARIABLE=disable_pause_stop VALUE=False
+    M117 PAUSE and STOP restored
+
+# FILAMENT RUNOUT SENSOR ENABLE|DISABLE MACROS #######################
+
+[gcode_macro RUNOUT_ON]
+gcode:
+  SET_FILAMENT_SENSOR_BASE SENSOR=RunoutSensor ENABLE=1
+  {% set svv = printer.save_variables.variables %}
+  SAVE_VARIABLE VARIABLE=enable_runout_sensor VALUE=1
+  REPORT_FILAMENT_SENSOR_ENABLE_STATUS
+
+[gcode_macro RUNOUT_OFF]
+gcode:
+  SET_FILAMENT_SENSOR_BASE SENSOR=RunoutSensor ENABLE=0
+  {% set svv = printer.save_variables.variables %}
+  SAVE_VARIABLE VARIABLE=enable_runout_sensor VALUE=0
+  REPORT_FILAMENT_SENSOR_ENABLE_STATUS
+
+[gcode_macro SET_FILAMENT_SENSOR]
+description: Sets the filament sensor on/off, based on Saved variable enable_runout_sensor in variables.cfg*
+# *Klipper's default behaviour is otherwise to enable or disable based on pause_on_runout: True or False in printer.cfg
+rename_existing: SET_FILAMENT_SENSOR_BASE
+gcode:
+  {% set svv = printer.save_variables.variables %}
+  {% if svv.enable_runout_sensor==0 %}
+    RUNOUT_OFF
+  {% elif svv.enable_runout_sensor==1 %}
+    RUNOUT_ON
+  {% endif %}
+
