--- a/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/MACROS.cfg
+++ b/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/MACROS.cfg
@@ -1,10 +1,12 @@
-# Last modified: 22 Aug 2023
+# Last modified: 29 Aug 2023
 # 
+# NOTE: FILE RENAMED at v1.2.9 of the DGUS-Reloaded Klipper component: WAS: CR6.cfg, IS: MACROS.cfg
+#
 # NOTES:
-# 1. This file contains configs and macros specifically tuned for my CR6-SE
+# 1. This file contains macros specifically tuned for my CR6-SE
 #    Anyone else using this file will need to review and modify these contents to suit themselves
 #
-# 2. EITHER: Printer.cfg MUST contain the line "Include CR6.cfg"
+# 2. EITHER: Printer.cfg MUST contain the line "Include MACROS.cfg"
 #        OR: The contents of this file must be copy/pasted into Printer.cfg AND that include statement commented-out
 #
 # 3.Test conditions, parameters, and commands can be included in MACROS. 
@@ -15,48 +17,9 @@
 #####################   CONFIGS   ####################
 #####################################################
 
-[bed_mesh]
-speed: 120
-horizontal_move_z: 2
-mesh_min: 10,10
-mesh_max: 220,220
-probe_count: 5    # probe a 5x5 grid (A requirement presently Hard-Coded into DGUS-Reloaded)
-mesh_pps: 3   # interpolate three additional mesh points between each pair of probed points, in both x and y
-algorithm: lagrange 
-move_check_distance: 5  # check whether abl should adjust z height, every 5mm of horizontal travel, while printing
-split_delta_z: .015  #adjust z height if abl mesh height differs from previus location by more than this amount
-fade_start: 1  # apply full bed mesh compensation for first 1mm of printing
-fade_end: 10  # Then begin to reduce that correction linearly, until it is reduced to fade_taget at Z=10mm
-fade_target: 0
-
-[safe_z_home]
-home_xy_position: 117.5,117.5
-speed: 100
-z_hop: 5
-
-# stable_z_home requires cloning a .py module (stable_z_home.py) into ~/klipper/klippy/extras
-# I found it here: https://github.com/matthewlloyd/Klipper-Stable-Z-Home
-# I use it to replace G28 Z in the START_PRINT macro, to reduce the risk of random mechanical issues causing a "bad" Home offset in Z 
-######################################################
-# CAUTION: If the system fails to home after max retries, it does NOT run END_PRINT.  DGUS-Reloaded is left in "printing" mode with Heaters OFF.
-######################################################
-[stable_z_home]
-# Ensures that filament residue on a nozzle will not result in a failed print due to Z Offset being biased by the residue.
-gcode:
-#  The G-code to run before each probe attempt. The default is none.
-retries: 20
-#  The maximum number of probe attempts allowed. The default is 20.
-window: 4
-#  The number of samples to use in the tolerance window. The default is 4.
-retry_tolerance: 0.02
-#  The maximum range between the min and max values of the Z offset in the window
-#  to consider the offset stable and complete the procedure. The default is 0.0025mm.
-#  My CR6 probe system seems to be incapable of achieving better than 0.015mm repeatability.
-#  I am told (still looking for a reference) that it is actually only specified accurate to 0.02mm, so not surprising.
-
-[force_move]
-# Setting this to true enables using the FORCE_MOVE_STEPPER commands, see https://www.klipper3d.org/G-Codes.html#force_move
-enable_force_move: True 
+# NOTE: At v1.2.9 of the DGUS-Reloaded Klipper component,
+# All of the CONFIG settings which once were here have 
+# now been moved into printer.cfg.
 
 #####################################################
 ############   END OF CONFIGS   ####################
@@ -66,6 +29,12 @@ enable_force_move: True
 #####################################################
 #####################   MACROS   ####################
 #####################################################
+#[gcode_macro CLEAR_SAVE_CONFIG_PENDING_ITEMS]
+#description: IN WIP. Syntactically incorrect in this form. Options being discussed in Klipper Discourse.
+#gcode:
+#    {% if printer['configfile'].save_config_pending_items != {} %}
+#        {% set printer['configfile'].save_config_pending_items = {} %}
+#    {% endif %}
 
 [gcode_macro TEST_RUNOUT_STATE]
 gcode:
