--- a/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/printer.cfg
+++ b/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/printer.cfg
@@ -1,4 +1,4 @@
-# Last Updated: 18 Aug 2023
+# Last Updated: 29 Aug 2023
 #
 # This file contains common pin mappings for the Creality 1.1.0.3 ERA motherboard. 
 # These same pin mappings should also work for the Creality 4.5.3 motherboard.
@@ -37,21 +37,28 @@
 [include mainsail.cfg]
 
 [include DGUS-Reloaded.cfg]
+# NOTE: At v1.2.9 of the DGUS-Reloaded Klipper component, the [t5uid1] section of this cfg file was moved back into this printer.cfg file
+# - It solved issue #37, in which SAVE_CONFIG failed when it tried to save changes to the display brightness variable. (Not an expected behaviour)
+# - It simultaneously enabled SAVE_CONFIG to make display brightness setting changes persist after RESTART and FIRMWARE RESTART events. 
 
-[include CR6.cfg]
-# NOTE: OPTIONALLY - You can copy the contents of CR6.cfg into this file and remove this include statement.
+[include MACROS.cfg]
+# NOTE: OPTIONALLY - You can copy the contents of MACROS.cfg into this file and remove this include statement.
 
 # IF you do not have moonraker timelapse installed, comment out this optional cfg:
 #[include timelapse.cfg]
 
-[include Development_Macros]
+[include Development_Macros.cfg]
 ###############################################################
 ######## Configuration Settings ###############################
 ###############################################################
 
-# Stepper Motor Settings #
+# Stepper Motor Settings ######################################
 
-# NOTE: If yours is a CR6-MAX printer, adjust the position_max values BOTH here and in DGUS-Reloaded.cfg
+[force_move]
+# Setting this to true enables using the FORCE_MOVE_STEPPER commands, see https://www.klipper3d.org/G-Codes.html#force_move
+enable_force_move: True 
+
+# NOTE: If yours is a CR6-MAX printer, adjust the position_max values BOTH here AND in the [t5uid1] section, below
 [stepper_x]
 step_pin: PB8
 dir_pin: !PB7
@@ -92,7 +99,7 @@ second_homing_speed: 1
 homing_retract_dist: 2.0
 
 
-# Probe Settings #
+# Probe Settings ######################################
 
 [probe]
 pin: PA4
@@ -118,8 +125,34 @@ value: 1
 [output_pin probe_enable]
 pin: PB2
 
+[safe_z_home]
+home_xy_position: 117.5,117.5
+speed: 100
+z_hop: 5
 
-# Extruder and HotEnd Settings #
+[stable_z_home]
+# Ensures that filament residue on a nozzle will not result in a failed print due to Z Offset being biased by the residue.
+# NOTE: stable_z_home requires cloning a .py module (stable_z_home.py) into ~/klipper/klippy/extras
+#       I found it here: https://github.com/matthewlloyd/Klipper-Stable-Z-Home
+#       I use it to replace G28 Z in the START_PRINT macro, to reduce the risk of random mechanical issues causing a "bad" Home offset in Z 
+#####################################################################################
+#  CAUTION: If the system fails to home after max retries, it does NOT run END_PRINT.  
+#  DGUS-Reloaded is instead left in "printing" mode with Heaters OFF.
+#####################################################################################
+gcode:
+#  The G-code to run before each probe attempt. The default is none.
+retries: 20
+#  The maximum number of probe attempts allowed. The default is 20.
+window: 4
+#  The number of samples to use in the tolerance window. The default is 4.
+retry_tolerance: 0.02
+#  The maximum range between the min and max values of the Z offset in the window
+#  to consider the offset stable and complete the procedure. The default is 0.0025mm.
+#  My CR6 probe system seems to be incapable of achieving better than 0.015mm repeatability.
+#  I am told (still looking for a reference) that it is actually only specified accurate to 0.02mm, so not surprising.
+
+
+# Extruder and HotEnd Settings #####################################
 
 [extruder]
 max_extrude_only_distance: 200.0
@@ -173,7 +206,7 @@ min_extrude_temp: 180
 pressure_advance: 0.04
 
 
-# Bed Heater Settings #
+# Bed Heater Settings #######################################
 
 [heater_bed]
 heater_pin: PB13
@@ -188,8 +221,23 @@ pid_Kp: 70
 pid_Ki: 1
 pid_Kd: 1000
 
+# Automatic Bed-Leveling Settings #####################################
 
-# Miscellaneous Settings #
+[bed_mesh]
+speed: 120
+horizontal_move_z: 2
+mesh_min: 10,10
+mesh_max: 220,220
+probe_count: 5    # probe a 5x5 grid (A requirement presently Hard-Coded into DGUS-Reloaded)
+mesh_pps: 3   # interpolate three additional mesh points between each pair of probed points, in both x and y
+algorithm: lagrange 
+move_check_distance: 5  # check whether abl should adjust z height, every 5mm of horizontal travel, while printing
+split_delta_z: .015  #adjust z height if abl mesh height differs from previous location by more than this amount
+fade_start: 1  # apply full bed mesh compensation for first 1mm of printing
+fade_end: 10  # Then begin to reduce that correction linearly, until it is reduced to fade_taget at Z=10mm
+fade_target: 0
+
+# Miscellaneous Settings #####################################
 
 [fan]
 pin: PB15
@@ -213,8 +261,17 @@ value: 0  ; set off by default at power up
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 restart_method: command
 
+[temperature_sensor mcu_temp]
+sensor_type: temperature_mcu
+min_temp: 0
+max_temp: 100
+# Comment-out these next two values, or edit them, using QUERY_ADC NAME-'temperature_mcu mcu_temp' to obtain the sensor_adc1 value 
+# and use an independent temperature sensor (e.g. bed or nozzle?) to estimate the actual mcu temperature, while everything is at room ambient temp.
+sensor_temperature1: 23
+sensor_adc1: 0.428022
 
-# Kinematics Settings #
+
+# Kinematics Settings #####################################
 
 # NOTE: Reduce these velocity and acceleration values if NOT using InputShaper
 [printer]
@@ -230,7 +287,6 @@ max_z_accel: 600
 [gcode_arcs] # Enables support for G1/G2 from slicer (e.g. from arc welder)
 resolution: 1.0
 
-
 ####################################
 #  ENABLE exclude_object function  #
 ####################################
@@ -242,6 +298,39 @@ resolution: 1.0
 [respond]
 default_type: error
 default_prefix: 
+
+###################################
+# DGUS-Reloaded.cfg Settings
+###################################
+[t5uid1]
+# Configured to describe the CR6-SE test printer
+firmware: dgus_reloaded
+#   This variable must be specified and must be dgus_reloaded
+machine_name: CR6-SE_Klipper
+#   The machine name shown on the information page.
+brightness: 100
+#   The default brightness for the touchscreen (as a value from 0 to 100).
+#   NOTE: If you SAVE_CONFIG after changing this value on the DGUS-Reloaded Setup screen, Klipper will comment-out the above preset and 
+#         will instead use the new value, made persistent in the --- SAVE_CONFIG --- section, below.
+#         It will do so, even if you use SAVE_CONFIG only after having made some other change (like PID), unless you RESTART before running SAVE_CONFIG
+x_min: -2  # My printer's nozzle happens to be ~2mm to the left of the bed, when homed.
+#   This can be used to provide a lower limit (in mm) to X moves done using the
+#   touschreen. Movements will still be limited by your [stepper_x]
+#   configuration values.
+x_max: 235
+#   This can be used to provide an upper limit (in mm) to X moves done using the
+#   touschreen. Movements will still be limited by your [stepper_x]
+#   configuration values.
+y_min: -2
+#   Same as x_min for the Y axis.
+y_max: 235
+#   Same as x_max for the Y axis.
+z_min: 0
+#   Same as x_min for the Z axis.
+z_max: 250
+#   Same as x_max for the Z axis.
+
+
 ###############################################################
 ############### END OF CONFIGS ################################
 ###############################################################
