--- a/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/printer.cfg
+++ b/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/printer.cfg
@@ -2,9 +2,6 @@
 #
 # This file contains common pin mappings for the Creality 1.1.0.3 ERA motherboard. 
 # These same pin mappings should also work for the Creality 4.5.3 motherboard.
-# The pin mappings for a Creality 4.5.2 board are available in the Mainsail MACHINE tab
-#    See: Config_examples/printer-creality-cr6se-2020.cfg
-# The pin mappings for the BTT SKR CR6 motherboard are available in the Related Changes folder printer.cfg file for that board
 
 # See https://www.klipper3d.org/Config_Reference.html for an explanation of the parameters used in this file.
 
@@ -267,8 +264,8 @@ min_temp: 0
 max_temp: 100
 # Comment-out these next two values, or edit them, using QUERY_ADC NAME-'temperature_mcu mcu_temp' to obtain the sensor_adc1 value 
 # and use an independent temperature sensor (e.g. bed or nozzle?) to estimate the actual mcu temperature, while everything is at room ambient temp.
-sensor_temperature1: 23
-sensor_adc1: 0.428022
+#sensor_temperature1: 23
+#sensor_adc1: 0.428022
 
 
 # Kinematics Settings #####################################
@@ -286,6 +283,7 @@ max_z_accel: 600
 
 [gcode_arcs] # Enables support for G1/G2 from slicer (e.g. from arc welder)
 resolution: 1.0
+
 
 ####################################
 #  ENABLE exclude_object function  #
